--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
   background-color: #f3fff4;
 }
 
-/* Navbar Style */
+/* Navbar Section */
 .navbar {
   z-index: 3;
 }
@@ -92,4 +92,87 @@ body {
   border: none;
   font-size: 20px;
   font-weight: 700;
+}
+
+/* Layanan Section */
+#layanan {
+  padding: 100px 0;
+}
+
+.h2 {
+  font-size: 48px;
+  font-weight: 500;
+  color: var(--pr-color);
+}
+
+.sub-title {
+  font-size: 18px;
+  color: #000;
+}
+
+.card-layanan {
+  width: 100%;
+  height: 313px;
+  border-radius: 5px;
+  background-color: #fff;
+  padding: 40px;
+  box-shadow: 0 0 7px 3px rgba(0, 0, 0, 0, 05);
+  transition: all .2s ease-in;
+}
+
+.circle-icon {
+  width: 70px;
+  height: 70px;
+  background-color: var(--pr-color);
+  border-radius: 50%;
+  transition: all .1s ease-in;
+}
+
+.card-layanan h3 {
+  color: var(--pr-color);
+  font-size: 24px;
+  transition: all .2s ease-in;
+}
+
+.card-layanan p {
+  color: #000;
+  font-size: 14px;
+  transition: all .3s ease-in;
+}
+
+/* Hover */
+.card-layanan:hover {
+  width: 100%;
+  height: 313px;
+  border-radius: 5px;
+  background: linear-gradient(160deg, var(--pr-color), #000);
+  padding: 40px;
+  box-shadow: 0 0 7px 3px rgba(0, 0, 0, 0, 05);
+  transition: all .2s ease-in;
+  
+}
+
+.card-layanan:hover .circle-icon {
+  background-color: #fff;
+  transition: all .2s ease-in;
+}
+
+.circle-icon:hover {
+  width: 70px;
+  height: 70px;
+  background-color: var(--pr-color);
+  border-radius: 50%;
+  transition: all .2s ease-in;
+}
+
+.card-layanan:hover h3 {
+  color: #fff;
+  font-size: 24px;
+  transition: all .2s ease-in;
+}
+
+.card-layanan:hover p {
+  color: #fff;
+  font-size: 14px;
+  transition: all .3s ease-in;
 }
